--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,7 @@
 
 - name: Deregister RHEL instance subscription
   redhat_subscription:
+    become: yes
     state: absent
     activationkey: "{{ rh_activationkey }}"
     org_id: "{{ rh_org_id }}"
