--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,6 +12,10 @@
   until: dereg_sub is not failed
   retries: 5
 
+- name: Unregister insights-client
+  ansible.builtin.command: >
+    insights-client --unregister
+
 - name: Update stage tag to deregistered
   ec2_tag:
     region: "{{ ec2_region }}"
