--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: Update stage tag to deregistered
   ec2_tag:
     region: "{{ ec2_region }}"
-    resource: "{{ hostvars[inventory_hostname]['ec2_id'] }}"
+    resource: "{{ hostvars[inventory_hostname]['instance_id'] }}"
     state: present
     tags:
       Stage: "deregistered"
